# clankers

./: .gitattributes  Cargo.toml  flake.nix
crates/core/: Cargo.toml
crates/core/examples/: agent.rs  agent_autonomous.rs  agent_evaluator_optimizer.rs  agent_orchestrator.rs  agent_parallelization.rs  agent_prompt_chaining.rs  agent_routing.rs  agent_stream_chat.rs  agent_with_agent_tool.rs  agent_with_cohere.rs  agent_with_context.rs  agent_with_deepseek.rs  agent_with_default_max_turns.rs  agent_with_echochambers.rs  agent_with_galadriel.rs  agent_with_grok.rs  agent_with_groq.rs  agent_with_huggingface.rs  agent_with_hyperbolic.rs  agent_with_loaders.rs  agent_with_mira.rs  agent_with_moonshot.rs  agent_with_ollama.rs  agent_with_openrouter.rs  agent_with_together.rs  agent_with_tools.rs  agent_with_tools_otel.rs  anthropic_agent.rs  anthropic_streaming.rs  anthropic_streaming_with_tools.rs  anthropic_think_tool.rs  anthropic_think_tool_with_other_tools.rs  calculator_chatbot.rs  chain.rs  cohere_streaming.rs  cohere_streaming_with_tools.rs  complex_agentic_loop_claude.rs  custom_vector_store.rs  debate.rs  deepseek_streaming.rs  (+57 more)
crates/core/src/: audio_generation.rs  evals.rs  extractor.rs  image_generation.rs  json_utils.rs  lib.rs  one_or_many.rs  prelude.rs  streaming.rs  transcription.rs  wasm_compat.rs
crates/core/src/agent/: builder.rs  completion.rs  mod.rs  tool.rs
crates/core/src/agent/prompt_request/: hooks.rs  mod.rs  streaming.rs
crates/core/src/client/: audio_generation.rs  builder.rs  completion.rs  embeddings.rs  image_generation.rs  mod.rs  transcription.rs  verify.rs
crates/core/src/completion/: conversions.rs  message.rs  mod.rs  request.rs
crates/core/src/embeddings/: builder.rs  distance.rs  embed.rs  embedding.rs  tool.rs
crates/core/src/http_client/: mod.rs  multipart.rs  retry.rs  sse.rs
crates/core/src/integrations/: cli_chatbot.rs  discord_bot.rs
crates/core/src/loaders/: file.rs  pdf.rs
crates/core/src/loaders/epub/: errors.rs  loader.rs  text_processors.rs
crates/core/src/pipeline/: agent_ops.rs  conditional.rs  mod.rs  op.rs  parallel.rs  try_op.rs
crates/core/src/providers/: azure.rs  deepseek.rs  galadriel.rs  groq.rs  hyperbolic.rs  mira.rs  mod.rs  moonshot.rs  ollama.rs  openai_compat.rs  perplexity.rs  voyageai.rs
crates/core/src/providers/anthropic/: client.rs  completion.rs  mod.rs  streaming.rs  types.rs
crates/core/src/providers/anthropic/decoders/: jsonl.rs  line.rs  sse.rs
crates/core/src/providers/azure/: audio_generation.rs  client.rs  completion.rs  embedding.rs  image_generation.rs  mod.rs  transcription.rs
crates/core/src/providers/cohere/: client.rs  completion.rs  embeddings.rs  mod.rs  streaming.rs
crates/core/src/providers/deepseek/: client.rs  completion.rs  mod.rs
crates/core/src/providers/galadriel/: client.rs  completion.rs  mod.rs
crates/core/src/providers/gemini/: api_types.rs  client.rs  completion.rs  embedding.rs  mod.rs  streaming.rs  transcription.rs
crates/core/src/providers/groq/: client.rs  completion.rs  mod.rs  transcription.rs
crates/core/src/providers/huggingface/: client.rs  completion.rs  image_generation.rs  mod.rs  streaming.rs  transcription.rs
crates/core/src/providers/huggingface/completion/: mod.rs  types.rs
crates/core/src/providers/hyperbolic/: audio_generation.rs  client.rs  completion.rs  image_generation.rs  mod.rs
crates/core/src/providers/mira/: client.rs  completion.rs  mod.rs
crates/core/src/providers/mistral/: client.rs  completion.rs  embedding.rs  mod.rs
crates/core/src/providers/ollama/: client.rs  completion.rs  embedding.rs  message.rs  mod.rs
crates/core/src/providers/openai/: audio_generation.rs  client.rs  embedding.rs  image_generation.rs  mod.rs  transcription.rs
crates/core/src/providers/openai/completion/: mod.rs  streaming.rs  types.rs
crates/core/src/providers/openai/responses_api/: mod.rs  streaming.rs  types.rs
crates/core/src/providers/openrouter/: client.rs  completion.rs  mod.rs  streaming.rs
crates/core/src/providers/perplexity/: client.rs  completion.rs  mod.rs
crates/core/src/providers/together/: client.rs  completion.rs  embedding.rs  mod.rs  streaming.rs
crates/core/src/providers/xai/: api.rs  client.rs  completion.rs  mod.rs  streaming.rs
crates/core/src/telemetry/: mod.rs
crates/core/src/tool/: mod.rs  server.rs  think.rs
crates/core/src/vector_store/: builder.rs  in_memory_store.rs  lsh.rs  mod.rs  request.rs
crates/core/tests/: embed_macro.rs  openai_response_schema.rs  openai_responses_input_item.rs  permission_control.rs
crates/core/tests/data/: dummy.epub
crates/derive/: Cargo.toml
crates/derive/examples/clankers_tool/: async_tool.rs  full.rs  simple.rs  with_description.rs
crates/derive/examples/rig_tool/: async_tool.rs  full.rs  simple.rs  with_description.rs
crates/derive/src/: basic.rs  client.rs  custom.rs  embed.rs  lib.rs
crates/derive/tests/: calculator.rs
nix/bundles/: rust.config.nix
nix/bundles/openssl/: default.nix
nix/flake/: default.nix
