[package]
name = "clankers-core"
version = "0.30.0"
edition = { workspace = true }
license = "MIT"
readme = "README.md"
description = "An opinionated library for building LLM powered applications."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "clankers"
path = "src/lib.rs"
doctest = false

[features]
default = ["reqwest-tls"]
all = ["derive", "pdf", "rayon"]
audio = []
image = []
derive = ["dep:clankers-derive"]
experimental = []
discord-bot = ["dep:serenity"]
pdf = ["dep:lopdf"]
epub = ["dep:epub", "dep:quick-xml"]
rayon = ["dep:rayon"]
wasm = ["dep:wasm-bindgen-futures", "futures-timer/wasm-bindgen", "getrandom/wasm_js"]
socks = ["reqwest/socks"]
reqwest-tls = ["reqwest/default"]
reqwest-rustls = ["reqwest/rustls", "reqwest/charset", "reqwest/http2"]
reqwest-middleware = ["dep:reqwest-middleware"]
reqwest-middleware-rustls = ["reqwest-middleware", "reqwest-middleware/rustls"]

[dependencies]
as-any = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clankers-derive = { version = "0.1", path = "../derive", optional = true }
epub = { workspace = true, optional = true }
eventsource-stream = "0.2"
fastrand = "2.3"
futures = { workspace = true }
futures-timer = "3.0"
getrandom = { version = "0.4", optional = true }
glob = { workspace = true }
http = "1.4"
lopdf = { workspace = true, optional = true }
mime = "0.3"
mime_guess.workspace = true
nanoid = { workspace = true }
ordered-float = { workspace = true }
pin-project-lite = "0.2"
quick-xml = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
reqwest-middleware = { version = "0.5", optional = true, features = [
  "json",
  "multipart",
  "charset",
  "http2",
] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serenity = { version = "0.12", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }
tracing-futures = { version = "0.2", features = ["futures-03"] }
url = { workspace = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
axum = "0.8"
base64 = { workspace = true }
hyper-util = { version = "0.1", features = ["service", "server"] }
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
redis = { version = "1.0", features = ["tokio-comp", "aio", "vector-sets"] }
serde_path_to_error = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }
tracing-opentelemetry = "0.32"
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true

[[test]]
name = "embed_macro"
required-features = ["derive"]

[[example]]
name = "rag"
required-features = ["derive"]

[[example]]
name = "rag_ollama"
required-features = ["derive"]

[[example]]
name = "vector_search"
required-features = ["derive"]

[[example]]
name = "vector_search_cohere"
required-features = ["derive"]

[[example]]
name = "gemini_embeddings"
required-features = ["derive"]

[[example]]
name = "agent_with_moonshot"

[[example]]
name = "pdf_agent"
required-features = ["derive", "pdf"]

[[example]]
name = "agent_with_together"
required-features = ["derive"]

[[example]]
name = "together_embeddings"
required-features = ["derive"]

[[example]]
name = "openai_audio_generation"
required-features = ["audio"]

[[example]]
name = "hyperbolic_audio_generation"
required-features = ["audio"]

[[example]]
name = "mistral_embeddings"
required-features = ["derive"]

[[example]]
name = "voyageai_embeddings"
required-features = ["derive"]

[[example]]
name = "request_hook"

[[example]]
name = "discord_bot"
required-features = ["discord-bot"]

[[example]]
name = "custom_vector_store"
