[package]
name = "clankers-derive"
version = "0.1.10"
edition = { workspace = true }
license = "MIT"
description = "Internal crate that implements Clankers derive macros."

[lib]
proc-macro = true

[dependencies]
convert_case = { workspace = true }
deluxe = { workspace = true, features = ["full"] }
indoc = { workspace = true }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
clankers-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[[example]]
name = "simple"
path = "examples/clankers_tool/simple.rs"

[[example]]
name = "with_description"
path = "examples/clankers_tool/with_description.rs"

[[example]]
name = "full"
path = "examples/clankers_tool/full.rs"

[[example]]
name = "async_tool"
path = "examples/clankers_tool/async_tool.rs"
